sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:15: error: not found: value j
    setValeur(i-j,v)
                ^