sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() 
{
  var v = 0
  for(i <- getNombreValeurs()- 2 to 1 by -1)
  {
    copie(i,v)
    for(j <- 1 to i)
    {
      if(plusPetit(i-j+1,i-j))
      {
        v = getValeur(i-j)
      }
    }
    setValeur(i-j,v)
  }
}